Test some more